рефактор ответов на вопросы